--- a/Views/index.html
+++ b/Views/index.html
@@ -20,17 +20,22 @@
     <div id="users-container">Currently in Room:</div>
 
     <!--To join room-->
-    <input type = 'text' id = room>
-    <button type = 'button' id = 'join'>Join Room</button>
+    <!--<input type='text' id=room>
+    <button type='button' id='join'>Join Room</button>-->
 
+    <!-- Room list -->
+    <div id="room-list">
+        <a href="#" class="room-link" data-room-name="Room1">Room1</a>
+        <a href="#" class="room-link" data-room-name="Room2">Room2</a>
+        <a href="#" class="room-link" data-room-name="Room3">Room3</a>
+    </div>
 
     <!--Scripts-->
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/chat.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/chat.js"></script>
 
 
-    
 </body>
 
 </html>
