very minor change

--- a/views/rooms.handlebars
+++ b/views/rooms.handlebars
@@ -16,13 +16,15 @@
         </row>
     </form>
     </div>
-    <div class="col-8 chatbox">
+    <div class="main-container">
         <row class="sport-title">
             <h3>{{sport.name}}</h3>
         </row>
         <row class="api-info">
             {{!-- Insert API info here --}}
         </row>
-        {{body}}
+        <row class="chatbox">
+            {{body}}
+        </row>
     </div>
 </row>
