--- a/views/chatroom.handlebars
+++ b/views/chatroom.handlebars
@@ -1,18 +1,23 @@
 <row class="chatbox-title">
-    <h3>{{room.name}}</h3>
-</row>
-<row class="align-items-end">
-    {{!-- Chat box messages-- TO DO: create dynamically --}}
-    {{!-- Messages received: --}}
-    <div class="alert alert-success message reveived"></div>
-    {{!-- Messages sent: --}}
-    <div class="alert alert-info message sent"></div>
-</row>
-<row class="align-items-end">
-    <div class="input-group">
-        <input type="text" class="form-control" placeholder="Enter message here">
-        <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button">Send</button>
-        </div>
-    </div>
-</row>
+                        <h3>{{room.name}}</h3>
+                    </row>
+                    <row class="align-items-end">
+                        {{!-- Messages received: --}}
+                        <div class="alert alert-success message reveived d-flex">
+                            <p>{{message.sender}}: </p>
+                            <p> {{message}}</p>
+                        </div>
+                        {{!-- Messages sent: --}}
+                        <div class="alert alert-info message sent justify-content-end d-flex">
+                            <p>You: </p>
+                            <p> {{message}}</p>
+                        </div>
+                    </row>
+                    <row class="align-items-end">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Enter message here">
+                            <div class="input-group-append">
+                                <button class="btn btn-outline-secondary" type="button">Send</button>
+                            </div>
+                        </div>
+                    </row>
