--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -8,35 +8,41 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <a href="/">BLEACHERS</a>
-      </h1>
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" >
-          SELECT YOUR SPORT
-      </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Soccer</a>
-          <a class="dropdown-item" href="#">Basketball</a>
-          <a class="dropdown-item" href="#">Football</a>
+  {{!-- <div class="flex-column justify-space-around"> --}}
+    <nav class="navbar navbar-expand bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">BLEACHERS</a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Soccer</a></li>
+                  <li><a class="dropdown-item" href="#">Basketball</a></li>
+                  <li><a class="dropdown-item" href="#">Football</a></li>
+                </ul>
+              </li>
+            </ul>
+            <span class="navbar-text">
+                {{#if logged_in}}
+                {{name}}|
+                <a href="/login">Log out</a>
+                {{else}}
+                <a href="/login">Login</a>
+                {{/if}}
+            </span>
+          </div>
         </div>
-      <nav>
-        {{#if logged_in}}
-        <h3>{{name}}</h3> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
-    </header>
-    <main class="container container-fluid mt-5">
+    </nav>
+    <main class="container container-fluid mx-5">
       {{{ body }}}
     </main>
     <footer>
-      
+      Created by group 1- &copy. All rights reserved.
     </footer>
-  </div>
+  {{!-- </div> --}}
 
   {{#if logged_in}}
   <script src="/public/js/logout.js"></script>
