changes from last night

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
 <container class="row">
     <div class="col-md-6"></div>
-        <h2>Login</h2>
-        <form class="form signup-form">
+    <h2>Login</h2>
+    <form class="form signup-form" action="/signup" method="POST">
         <div class="nickname input">
             <label for="nickname-signup">Nickname:</label>
             <input class="form-input input-box" type="text" id="nickname-signup" />
@@ -13,7 +13,7 @@
         <div class="submit">
             <button class="btn btn-primary" type="submit">Login</button>
         </div>
-        </form>
-        <h5>Already have a nickname? <a href="/login">Login here.</a></h5>
+    </form>
+    <h5>Already have a nickname? <a href="/login">Login here.</a></h5>
     </div>
 </container>
