--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,3 +17,5 @@
         <h5>Don't have an nickname? <a href="/signup">Sign up for one here.</a></h5>
     </div>
 </container>
+
+<script src="/js/login.js"></script>
