--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,19 +1,23 @@
-<container class="row">
-    <div class="col-md-6"></div>
-    <h2>Login</h2>
-    <form class="form signup-form" action="/signup" method="POST">
-        <div class="nickname input">
-            <label for="nickname-signup">Nickname:</label>
-            <input class="form-input input-box" type="text" id="nickname-signup" />
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Sign Up</h2>
+                <form class="form signup-form" id="signup-form">
+                <div class="nickname input form-group">
+                    <label for="nickname-signup">Nickname:</label>
+                    <input class="form-input input-box" type="text" id="nickname-signup" name="nickname" />
+                </div>
+                <div class="password input form-group">
+                    <label for="password-signup">Password:</label>
+                    <input class="form-input input-box" type="password" id="password-signup" name="password" />
+                </div>
+                <div class="submit form-group">
+                    <button class="btn btn-primary" type="submit">Sign Up</button>
+                </div>
+            </form>
+            <h5>Already have a nickname? <a href="/login">Login here.</a></h5>
         </div>
-        <div class="password input">
-            <label for="password-signup">Password:</label>
-            <input class="form-input input-box" type="password" id="password-signup" />
-        </div>
-        <div class="submit">
-            <button class="btn btn-primary" type="submit">Login</button>
-        </div>
-    </form>
-    <h5>Already have a nickname? <a href="/login">Login here.</a></h5>
     </div>
-</container>
+</div>
+
+<script src="/js/signup.js"></script>
