--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,21 @@
 <container class="row">
-    <div class="col-md-6"></div>
-        <h2>Login</h2>
-        <form class="form login-form">
-            <div class="nickname input form-group">
-                <label for="nickname-login">Nickname:</label>
-                <input class="form-input input-box" type="text" id="nickname-login" />
-            </div>
-            <div class="password input form-group">
-                <label for="password-login">Password:</label>
-                <input class="form-input input-box" type="password" id="password-login" />
-            </div>
-            <div class="submit form-group">
-                <button class="btn btn-primary" type="submit">Login</button>
-            </div>
-        </form>
-        <h5>Don't have an nickname? <a href="/signup">Sign up for one here.</a></h5>
-    </div>
+  <div class="col-md-6"></div>
+    <h2>Login</h2>
+<form class="form login-form">
+        <div class="nickname input form-group">
+            <label for="nickname-login">Nickname:</label>
+            <input class="form-input input-box" type="text" id="nickname-login" name="nickname" />
+        </div>
+        <div class="password input form-group">
+            <label for="password-login">Password:</label>
+            <input class="form-input input-box" type="password" id="password-login" name="password" />
+        </div>
+        <div class="submit form-group">
+            <button class="btn btn-primary" type="submit">Login</button>
+        </div>
+    </form>
+    <h5>Don't have an nickname? <a href="/signup">Sign up for one here.</a></h5>
+  </div>
 </container>
 
 <script src="/js/login.js"></script>
