no major changes

--- a/views/rooms.handlebars
+++ b/views/rooms.handlebars
@@ -28,7 +28,7 @@
             {{!-- Insert API info here --}}
         </row>
         <row class="chatbox">
-            {{body}}
+            {{> chatroom }}
             {{!-- google partial --}}
         </row>
     </div>
