--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,6 +9,8 @@
                 </div>
                 <div class="password input form-group">
                     <label for="password-signup">Password:</label>
+                    <p id="error-message" style="display: none; color: red;"></p>
+
                     <input class="form-input input-box" type="password" id="password-signup" name="password" />
                 </div>
                 <div class="submit form-group">
