--- a/views/rooms.handlebars
+++ b/views/rooms.handlebars
@@ -32,3 +32,11 @@
         </row>
     </div>
 </row>
+
+<script src="/socket.io/socket.io.js"></script>
+
+<!-- Load chat.js script -->
+<script src="/js/chat.js"></script>
+
+<!-- Load app.js script -->
+<script src="/js/app.js"></script>
