--- a/views/rooms.handlebars
+++ b/views/rooms.handlebars
@@ -13,10 +13,10 @@
             {{/each}}
         </ul>
         </row>
-        <row class="pt-4">
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control" placeholder="Room name">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Add room</button>
+        <row class="pt-4" id="rooms-div">
+            <form class="form-inline my-2 my-lg-0 create-form">
+                <input class="form-control" id="room-name" placeholder="Room name">
+                <button class="btn btn-outline-success my-2 my-sm-0" id="create-room" type="submit">Add room</button>
             </form>
         </row>
     </div>
