--- a/views/rooms.handlebars
+++ b/views/rooms.handlebars
@@ -1,22 +1,21 @@
 <row class="row main mt-5">
     <div class="col-3">
         <row>
-            <ul class="rooms nav flex-column">
+            <ul class="rooms nav flex-column" id="rooms-list">
                 <li class="room nav-item" id="{{room.id}}">
                     <h2>Active rooms</h2>
                 </li>
-            {{#each rooms as |room| }}
+                {{#each rooms as |room| }}
                 <li class="room nav-item" id="{{room.id}}">
-                    {{!-- QUESTION --}}
-                   <a class="nav-link" href="/chatroom/{{room.id}}">{{room.name}}</a>
+                    <a class="nav-link" href="/chatroom/{{room.id}}">{{room.name}}</a>
                 </li>
-            {{/each}}
-        </ul>
+                {{/each}}
+            </ul>
         </row>
         <row class="pt-4">
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control" placeholder="Room name">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Add room</button>
+            <form id="add-room-form" class="form-inline my-2 my-lg-0">
+                <input id="room-name" class="form-control" placeholder="Room name">
+                <button id="addroom" class="btn btn-outline-success my-2 my-sm-0" type="submit">Add room</button>
             </form>
         </row>
     </div>
@@ -32,11 +31,3 @@
         </row>
     </div>
 </row>
-
-<script src="/socket.io/socket.io.js"></script>
-
-<!-- Load chat.js script -->
-<script src="/js/chat.js"></script>
-
-<!-- Load app.js script -->
-<script src="/js/app.js"></script>
