--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,10 +17,11 @@
         <a class="navbar-brand" href="/">BLEACHERS</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {{#if logged_in}}
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Dropdown
+                Select your sport
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Soccer</a></li>
@@ -28,6 +29,7 @@
                 <li><a class="dropdown-item" href="#">Football</a></li>
               </ul>
             </li>
+            {{/if}}
           </ul>
           <span class="navbar-text">
             {{#if logged_in}}
@@ -48,7 +50,9 @@
     </footer>
     {{!--
   </div> --}}
-
+` <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="../../public/js/index.js" ></script>
+   <script src="../../public/js/" ></script>
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   <script src="/socket.io/socket.io.js"></script>
