--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,14 +19,14 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             {{#if logged_in}}
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Select your sport
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Soccer</a></li>
-                <li><a class="dropdown-item" href="#">Basketball</a></li>
-                <li><a class="dropdown-item" href="#">Football</a></li>
+                <li><a class="dropdown-item" href="">Soccer</a></li>
+                <li><a class="dropdown-item" href="">Basketball</a></li>
+                <li><a class="dropdown-item" href="">Football</a></li>
               </ul>
             </li>
             {{/if}}
