--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,16 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BLEACHERS</title>
   <link rel="stylesheet" href="/css/style.css">
+   <link rel="stylesheet" href="/css/chat.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
   {{!-- <div class="flex-column justify-space-around"> --}}
-    <nav class="navbar navbar-expand bg-body-tertiary">
-      <div class="container-fluid">
+   <nav class="navbar navbar-expand bg-body-tertiary custom-navbar custom-navbar-bg">
+    <div class="container-fluid">
         <a class="navbar-brand" href="/">BLEACHERS</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             {{#if logged_in}}
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
@@ -49,8 +50,8 @@
     {{!--
   </div> --}}
 ` <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  <script src="../../public/js/index.js" ></script>
-   <script src="../../public/js/" ></script>
+  <script src="/js/index.js" ></script>
+   <script src="/js/chat.js"></script>
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   <script src="/socket.io/socket.io.js"></script>
